<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@drawable/dialog_rounded_bg"
    >

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:id="@+id/firstName" />
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/firstName"
        android:layout_alignParentStart="true"
        android:id="@+id/lastName" />
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone"
        android:layout_marginTop="15dp"
        android:id="@+id/telephone"
        android:layout_below="@+id/lastName"
        android:layout_alignParentStart="true"
        android:inputType="number"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:layout_marginTop="24dp"
        app:bootstrapBrand="success"
        android:id="@+id/save_auto_msg"
        android:layout_below="@+id/telephone"
        android:layout_alignParentStart="true"
        app:roundedCorners="true"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="regular"
        android:text="@string/cancel"
        android:id="@+id/cancelButton"
        android:layout_alignBaseline="@+id/deleteButton"
        android:layout_alignBottom="@+id/deleteButton"
        android:layout_alignParentEnd="true"
        app:roundedCorners="true"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="danger"
        android:text="@string/delete"
        android:id="@+id/deleteButton"
        android:visibility="invisible"
        android:layout_alignBaseline="@+id/save_auto_msg"
        android:layout_alignBottom="@+id/save_auto_msg"
        android:layout_centerHorizontal="true"
        app:roundedCorners="true"/>
</RelativeLayout>