<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded_bg"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/new_auto_msg"
        android:id="@+id/textView"
        android:textAlignment="center"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/auto_msg_txt"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:hint="@string/new_msg_placeholder"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:gravity="start|end"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/pick_date"
        android:editable="false"
        android:layout_below="@+id/auto_msg_txt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:hint="@string/sel_date"
        android:focusable="false"
        />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/pick_time"
        android:inputType="none"
        android:layout_below="@+id/pick_date"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:hint="@string/sel_time"
        android:editable="false"
        android:focusable="false"
        />

    <!--<DatePicker
        android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />-->

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/create"
        android:layout_marginTop="40dp"
        app:bootstrapBrand="success"
        android:id="@+id/save_auto_msg"
        android:layout_marginStart="37dp"
        android:layout_below="@+id/pick_time"
        android:layout_alignParentStart="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:text="@string/cancel"
        android:id="@+id/cancel_new_auto_msg"
        app:bootstrapBrand="info"
        android:layout_alignTop="@+id/save_auto_msg"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/is_auto_msg"
        android:layout_below="@+id/save_auto_msg"
        android:layout_alignStart="@+id/save_auto_msg"
        android:layout_marginTop="29dp"

        />
</RelativeLayout>